--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kristian's CyberSec Journey</title>
+    <link rel="stylesheet" href="styles.css"> <!-- This links to your CSS file for styling -->
+</head>
+<body>
+    <!-- Navigation Menu -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="tryhackme.html">TryHackMe</a></li>
+                <li><a href="tcmsecurity.html">TCM Security</a></li>
+                <li><a href="achievements.html">Achievements</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="books.html">Books I've Read</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Welcome Section -->
+    <section id="welcome">
+        <h1>Welcome to My CyberSec Journey</h1>
+        <p>This website documents my journey in cybersecurity, covering TryHackMe, TCM Security, and more.</p>
+    </section>
+
+    <!-- About Me Section -->
+    <section id="about">
+        <h2>About Me</h2>
+        <img src="yourphoto.jpg" alt="Photo of Kristian" style="width:150px; height:150px;">
+        <p>Hi, I’m Kristian, a cybersecurity enthusiast. Here I document my progress in ethical hacking, cybersecurity, and my journey to becoming a professional in the field.</p>
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>Check out my <a href="https://github.com/YourGitHubProfile">GitHub Profile</a></p>
+    </footer>
+</body>
+</html>
