--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 <li><a href="achievements.html">Achievements</a></li>
                 <li><a href="resume.html">Resume</a></li>
                 <li><a href="books.html">Books I've Read</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="cyber-news.html">Cybersecurity News</a></li>
             </ul>
         </nav>
     </header>
@@ -33,6 +36,17 @@
         <img src="yourphoto.jpg" alt="Photo of Kristian" style="width:150px; height:150px;">
         <p>Hi, I’m Kristian, a cybersecurity enthusiast. Here I document my progress in ethical hacking, cybersecurity, and my journey to becoming a professional in the field.</p>
     </section>
+
+    <!-- Recent Updates or Topics Section -->
+<section id="recent-updates">
+    <h2>Recent Updates</h2>
+    <ul>
+        <li><a href="blog.html#post1">Exploring Network Pentesting Techniques</a> - Posted on Sep 10, 2024</li>
+        <li><a href="cyber-news.html#news1">New Vulnerability Found in IoT Devices</a> - Posted on Sep 9, 2024</li>
+        <li><a href="projects.html#project1">Completed the Web Vulnerability Scanning Project</a> - Posted on Sep 5, 2024</li>
+    </ul>
+</section>
+
 
     <!-- Footer Section -->
     <footer>
