--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kristian's CyberSec Journey</title>
-    <link rel="stylesheet" href="styles.css"> <!-- This links to your CSS file for styling -->
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
 <body>
+
     <!-- Navigation Menu -->
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="#welcome">Home</a></li>
+                <li><a href="#about">About Me</a></li>
                 <li><a href="tryhackme.html">TryHackMe</a></li>
                 <li><a href="tcmsecurity.html">TCM Security</a></li>
                 <li><a href="achievements.html">Achievements</a></li>
@@ -25,32 +27,41 @@
     </header>
 
     <!-- Welcome Section -->
-    <section id="welcome">
-        <h1>Welcome to My CyberSec Journey</h1>
-        <p>This website documents my journey in cybersecurity, covering TryHackMe, TCM Security, and more.</p>
+    <section id="welcome" class="full-screen">
+        <div class="content">
+            <h1>Welcome to My CyberSec Journey</h1>
+            <p>This website documents my journey in cybersecurity, covering TryHackMe, TCM Security, and more.</p>
+        </div>
+        <div class="image-circle">
+            <img src="yourphoto.jpg" alt="Photo of Kristian">
+        </div>
     </section>
 
     <!-- About Me Section -->
-    <section id="about">
-        <h2>About Me</h2>
-        <img src="yourphoto.jpg" alt="Photo of Kristian" style="width:150px; height:150px;">
-        <p>Hi, I’m Kristian, a cybersecurity enthusiast. Here I document my progress in ethical hacking, cybersecurity, and my journey to becoming a professional in the field.</p>
+    <section id="about" class="full-screen">
+        <div class="content">
+            <h2>About Me</h2>
+            <p>Hi, I’m Kristian, a cybersecurity enthusiast. Here I document my progress in ethical hacking, cybersecurity, and my journey to becoming a professional in the field.</p>
+        </div>
     </section>
 
-    <!-- Recent Updates or Topics Section -->
-<section id="recent-updates">
-    <h2>Recent Updates</h2>
-    <ul>
-        <li><a href="blog.html#post1">Exploring Network Pentesting Techniques</a> - Posted on Sep 10, 2024</li>
-        <li><a href="cyber-news.html#news1">New Vulnerability Found in IoT Devices</a> - Posted on Sep 9, 2024</li>
-        <li><a href="projects.html#project1">Completed the Web Vulnerability Scanning Project</a> - Posted on Sep 5, 2024</li>
-    </ul>
-</section>
-
+    <!-- Recent Updates Section -->
+    <section id="recent-updates" class="full-screen">
+        <div class="content">
+            <h2>Recent Updates</h2>
+            <ul>
+                <li><a href="blog.html#post1">Exploring Network Pentesting Techniques</a> - Posted on Sep 10, 2024</li>
+                <li><a href="cyber-news.html#news1">New Vulnerability Found in IoT Devices</a> - Posted on Sep 9, 2024</li>
+                <li><a href="projects.html#project1">Completed the Web Vulnerability Scanning Project</a> - Posted on Sep 5, 2024</li>
+            </ul>
+        </div>
+    </section>
 
     <!-- Footer Section -->
     <footer>
         <p>Check out my <a href="https://github.com/YourGitHubProfile">GitHub Profile</a></p>
     </footer>
+
+    <script src="script.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
