--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
         <p>Check out my <a href="https://github.com/YourGitHubProfile">GitHub Profile</a></p>
     </footer>
 
-    <script src="script.js"></script> <!-- Link to your JavaScript file -->
+    <script src="hover.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
