updated matrixeffect to lowercase

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </footer>
 <canvas id="matrixCanvasLeft"></canvas>
 <canvas id="matrixCanvasRight"></canvas>
-<script src="matrixEffect.js"></script>
+<script src="matrixeffect.js"></script>
 
 </body>
 </html>
