big website proggy

--- a/achievements.html
+++ b/achievements.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Achievements and Certifications</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Achievements</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to global CSS for consistent design -->
 </head>
 <body>
     <!-- Navigation Menu -->
@@ -24,23 +24,57 @@
         </nav>
     </header>
 
+    <!-- Achievements Header -->
+    <div id="achievements-header">
+        <h1>Achievements</h1>
+        <p>A showcase of my academic accomplishments, certifications, and professional milestones.</p>
+    </div>
+
     <!-- Achievements Section -->
-    <section id="achievements">
-        <h1>My Achievements</h1>
-        <p>Here are the certifications and achievements I’ve earned so far.</p>
+    <div id="achievements-container">
+        <!-- Bachelor of IT -->
+        <div class="achievement-category">
+            <h2>Bachelor of IT</h2>
+            <ul>
+                <li>La Trobe University</li>
+                <li>Expected Graduation: 2024</li>
+                <li>Specialization: Cybersecurity</li>
+            </ul>
+        </div>
 
-        <h2>Certifications</h2>
-        <ul>
-            <li>TryHackMe Complete Beginner Path</li>
-            <li>TCM Security Practical Network Pentester</li>
-            <li>CompTIA Security+ (in progress)</li>
-            <!-- Add more as I earn them -->
-        </ul>
-    </section>
+        <!-- Certifications -->
+        <div class="achievement-category">
+            <h2>Certifications</h2>
+            <ul>
+                <li>TryHackMe - Complete Beginner Pathway</li>
+                <li>TCM Security - Practical Ethical Hacking</li>
+                <li>CompTIA Security+ (In Progress)</li>
+            </ul>
+        </div>
 
-    <!-- Footer -->
+        <!-- Awards & Honors -->
+        <div class="achievement-category">
+            <h2>Awards & Honors</h2>
+            <ul>
+                <li>La Trobe IT Excellence Award (2023)</li>
+                <li>Cybersecurity Competition - 1st Place (2022)</li>
+            </ul>
+        </div>
+
+        <!-- Major Projects -->
+        <div class="achievement-category">
+            <h2>Major Projects</h2>
+            <ul>
+                <li>UniSchedulePlus: A university staff scheduling system</li>
+                <li>Firewall Visualization Tool: Developed secure network rule visualization</li>
+            </ul>
+        </div>
+    </div>
+
     <footer>
-        <p>Back to <a href="index.html">Home</a></p>
+        <p>Check out my <a href="https://github.com/YourGitHubProfile">GitHub Profile</a> for more!</p>
     </footer>
 </body>
 </html>
+
+
