--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>My Projects</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your global CSS file -->
 </head>
 <body>
     <!-- Navigation Menu -->
@@ -24,25 +24,37 @@
         </nav>
     </header>
 
+    <!-- Projects Pathway Header -->
+    <div id="projects-header" style="padding-top: 50px; text-align: center;">
+        <h1>My Projects</h1>
+        <p>Here's a list of projects I have completed, feel free to click on the links and read about the journey!</p>
+    </div>
+
     <!-- Projects Section -->
-    <section id="projects">
-        <h1>Projects</h1>
-        <p>Here are some projects I’ve worked on or am currently working on.</p>
+    <div id="tryhackme-container" style="display: flex; justify-content: center; align-items: center; margin-top: 50px; flex-wrap: wrap;">
+        <!-- First Project -->
+        <div class="topic" style="margin: 20px;">
+            <h2><a href="unischeduleplus.html" class="topic-link">UniSchedulePlus</a></h2>
+        </div>
 
-        <h2>Project 1: [Project Name]</h2>
-        <p>Description of the project, what technology you used, and what you learned. 
-        <br>Check out the <a href="https://github.com/YourProjectLink" target="_blank">GitHub repository</a>.</p>
+        <!-- Second Project -->
+        <div class="topic" style="margin: 20px;">
+            <h2><a href="teleprompter.html" class="topic-link">Teleprompter</a></h2>
+        </div>
 
-        <h2>Project 2: [Project Name]</h2>
-        <p>Description of the project, what technology you used, and what you learned. 
-        <br>Check out the <a href="https://github.com/YourProjectLink" target="_blank">GitHub repository</a>.</p>
+        <!-- Third Project -->
+        <div class="topic" style="margin: 20px;">
+            <h2><a href="portscanner.html" class="topic-link">Port Scanner</a></h2>
+        </div>
 
-        <!-- Add more projects as needed -->
-    </section>
+        <!-- Fourth Project -->
+        <div class="topic" style="margin: 20px;">
+            <h2><a href="mousemover.html" class="topic-link">Humanised Mouse Mover</a></h2>
+        </div>
+    </div>
 
-    <!-- Footer -->
-    <footer>
-        <p>Back to <a href="index.html">Home</a></p>
+    <footer style="text-align: center; margin-top: 50px;">
+        <p>Check out my <a href="https://github.com/YourGitHubProfile">GitHub Profile</a> for more!</p>
     </footer>
 </body>
 </html>
