--- a/tryhackme.html
+++ b/tryhackme.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TryHackMe Topics</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>TryHackMe Pathway</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your global CSS file -->
 </head>
 <body>
     <!-- Navigation Menu -->
@@ -24,24 +24,51 @@
         </nav>
     </header>
 
-    <!-- TryHackMe Topics -->
-    <section id="tryhackme">
-        <h1>TryHackMe Journey</h1>
-        <p>Here I document the topics and challenges I’ve completed on TryHackMe.</p>
+    <!-- TryHackMe Pathway Header -->
+    <div id="tryhackme-header">
+        <h1>TryHackMe Pathway</h1>
+        <p>Documenting my TryHackMe learning journey and challenges.</p>
+    </div>
 
-        <h2>Topics Covered</h2>
-        <ul>
-            <li><strong>Networking Fundamentals</strong>: Document networking basics like IP addresses, TCP/UDP, and the OSI model.</li>
-            <li><strong>Linux Basics</strong>: Cover common Linux commands and file system navigation.</li>
-            <li><strong>Web Exploitation</strong>: Dive into web application security topics like XSS, SQL Injection, etc.</li>
-            <li><strong>Vulnerability Scanning</strong>: Document how to use tools like Nmap, Nessus, and OpenVAS for scanning and enumeration.</li>
-            <!-- Add more as I progress -->
+    <!-- Topics Section -->
+    <div id="tryhackme-container">
+        <!-- First Topic: Networking Fundamentals -->
+        <div class="topic">
+            <h2>Networking Fundamentals</h2>
+            <ul>
+                <li>Networking Basics</li>
+                <li>Linux Basics</li>
+                <li>Web Exploitation</li>
+                <li>Vulnerability Scanning</li>
+            </ul>
+        </div>
+
+        <!-- Second Topic: Linux Fundamentals(use this for others but change links) -->
+        
+    <div class="topic">
+         <h2>Linux Fundamentals</h2>
+         <ul>
+             <li><a href="linuxfundamentalsp1.html" class="topic-link">Linux Fundamentals Part 1</a></li>
+             <li><a href="linuxfundamentalsp2.html" class="topic-link">Linux Fundamentals Part 2</a></li>
+             <li><a href="linuxfundamentalsp3.html" class="topic-link">Linux Fundamentals Part 3</a></li>
         </ul>
-    </section>
+    </div>
 
-    <!-- Footer -->
+
+        <!-- Third Topic: Network Exploitation -->
+        <div class="topic">
+            <h2>Network Exploitation Basics</h2>
+            <ul>
+                <li>Introductory Networking</li>
+                <li>Nmap</li>
+                <li>Network Services</li>
+                <li>Network Services 2</li>
+            </ul>
+        </div>
+    </div>
+
     <footer>
-        <p>Back to <a href="index.html">Home</a></p>
+        <p>Check out my <a href="https://github.com/YourGitHubProfile">GitHub Profile</a></p>
     </footer>
 </body>
 </html>
