--- a/books.html
+++ b/books.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Books I've Read</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your global CSS file -->
 </head>
 <body>
     <!-- Navigation Menu -->
@@ -24,27 +24,35 @@
         </nav>
     </header>
 
-    <!-- Books Section -->
-    <section id="books">
+    <!-- Books Header -->
+    <div id="achievements-header">
         <h1>Books I've Read</h1>
-        <p>Here is a list of books I’ve read along my journey, with personal notes and reviews.</p>
+        <p>A collection of books I have read, with reviews and insights.</p>
+    </div>
 
-        <h2>Cybersecurity and Hacking Books</h2>
-        <ul>
-            <li><strong>Book Title 1</strong> - A short description or key takeaways.</li>
-            <li><strong>Book Title 2</strong> - Your thoughts on the content or how it helped you.</li>
-            <!-- Add more as you I read more books -->
-        </ul>
+<!-- Books Section -->
+<div id="achievements-container">
+    <!-- Book 1 -->
+    <div class="achievement-category">
+        <h2><a href="book1.html" class="book-link">Book Title 1</a></h2>
+    </div>
 
-        <h2>Other Books</h2>
-        <ul>
-            <li><strong>Book Title 3</strong> - General tech or non-fiction books that are relevant to your interests.</li>
-        </ul>
-    </section>
+    <!-- Book 2 -->
+    <div class="achievement-category">
+        <h2><a href="book2.html" class="book-link">Book Title 2</a></h2>
+    </div>
 
-    <!-- Footer -->
+    <!-- Book 3 -->
+    <div class="achievement-category">
+        <h2><a href="book3.html" class="book-link">Book Title 3</a></h2>
+    </div>
+
+    <!-- Add more books as needed -->
+</div>
+
+
     <footer>
-        <p>Back to <a href="index.html">Home</a></p>
+        <p>Check out my <a href="https://github.com/YourGitHubProfile">GitHub Profile</a> for more!</p>
     </footer>
 </body>
 </html>
