--- a/resume.html
+++ b/resume.html
@@ -27,26 +27,8 @@
     <!-- Resume Section -->
     <section id="resume">
         <h1>My Resume</h1>
-        <p>Here is my most recent resume. You can <a href="Kristian_Resume.pdf" download>download it here</a>.</p>
+        <p>Here’s the <a href="Kristian_Resume.pdf" class="resume-link">link to my resume</a>.</p>
 
-        <h2>Work Experience</h2>
-        <ul>
-            <li><strong>Company Name</strong> - Position (Year to Year)</li>
-            <li><strong>Company Name</strong> - Position (Year to Year)</li>
-        </ul>
-
-        <h2>Education</h2>
-        <ul>
-            <li><strong>Latrobe University</strong> - Bachelor of IT </li>
-            <li><strong>Certifications</strong>: TryHackMe, TCM Security, etc.</li>
-        </ul>
-
-        <h2>Skills</h2>
-        <ul>
-            <li>Skill 1 (e.g., Python, Bash Scripting)</li>
-            <li>Skill 2 (e.g., Penetration Testing)</li>
-            <li>Skill 3 (e.g., Cloud Security)</li>
-        </ul>
     </section>
 
     <!-- Footer -->
@@ -55,4 +37,3 @@
     </footer>
 </body>
 </html>
-
