--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="tryhackme.html">TryHackMe</a></li>
-                <li><a href="tcmsecurity.html">TCM Security</a></li>
+                <li><a href="study-notes.html">Personal Study Notes</a></li>
                 <li><a href="achievements.html">Achievements</a></li>
                 <li><a href="resume.html">Resume</a></li>
                 <li><a href="books.html">Books I've Read</a></li>
@@ -29,7 +28,7 @@
         <!-- Welcome Section -->
         <section id="welcome">
             <h1>Welcome to My CyberSec Journey</h1>
-            <p>This website documents my journey in cybersecurity, covering TryHackMe, TCM Security, and more.</p>
+            <p>This website documents my journey in cybersecurity, please feel free to take a look around!</p>
         </section>
 
         <!-- Recent Updates Section -->
@@ -41,6 +40,10 @@
                     <li><a href="cyber-news.html#news1">New Vulnerability Found in IoT Devices</a> - Posted on Sep 9, 2024</li>
                     <li><a href="projects.html#project1">Completed the Web Vulnerability Scanning Project</a> - Posted on Sep 5, 2024</li>
                 </ul>
+                <!-- View All Button -->
+                <div class="view-all-container">
+                    <a href="recent-updates.html" class="view-all-btn">View All</a>
+                </div>
             </section>
 
             <!-- Image Section -->
@@ -73,10 +76,9 @@
     <footer>
         <p>Check out my <a href="https://github.com/YourGitHubProfile">GitHub Profile</a></p>
     </footer>
-<canvas id="matrixCanvasLeft"></canvas>
-<canvas id="matrixCanvasRight"></canvas>
-<script src="matrixeffect.js"></script>
+    <canvas id="matrixCanvasLeft"></canvas>
+    <canvas id="matrixCanvasRight"></canvas>
+    <script src="matrixeffect.js"></script>
 
 </body>
 </html>
-
