--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Projects</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to your global CSS file -->
+    <style>
+        /* Add red color styling for the title */
+        #projects-header h1 {
+            color: red;
+            font-size: 2.5rem;
+            letter-spacing: 2px;
+        }
+    </style>
 </head>
 <body>
     <!-- Navigation Menu -->
@@ -12,8 +20,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="tryhackme.html">TryHackMe</a></li>
-                <li><a href="tcmsecurity.html">TCM Security</a></li>
+                <li><a href="study-notes.html">Personal Study Notes</a></li>
                 <li><a href="achievements.html">Achievements</a></li>
                 <li><a href="resume.html">Resume</a></li>
                 <li><a href="books.html">Books I've Read</a></li>
