--- a/login.html
+++ b/login.html
@@ -5,44 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Firebase App (the core Firebase SDK) -->
-    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
-    <!-- Firebase Authentication -->
-    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth.js"></script>
-    <!-- Firebase Auth JS -->
-    <script src="scripts/firebase-auth.js" defer></script>
 </head>
 <body>
-    <h1>Login</h1>
+    <h1>Login to Access</h1>
+
     <form id="login-form">
         <label for="email">Email:</label>
-        <input type="email" id="email" required>
-        <br>
+        <input type="email" id="email" required><br><br>
         <label for="password">Password:</label>
-        <input type="password" id="password" required>
-        <br>
+        <input type="password" id="password" required><br><br>
         <button type="submit">Login</button>
     </form>
 
-    <script>
-        const loginForm = document.getElementById('login-form');
-        loginForm.addEventListener('submit', (e) => {
-            e.preventDefault();
+    <!-- Firebase SDK and login script -->
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js";
+      import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
 
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
+      // Your web app's Firebase configuration
+      const firebaseConfig = {
+        apiKey: "AIzaSyAx-IM5C1Qx4T5tdeMP4nOIT0-iZLTxX7Q",
+        authDomain: "kristiancybersec.firebaseapp.com",
+        projectId: "kristiancybersec",
+        storageBucket: "kristiancybersec.appspot.com",
+        messagingSenderId: "635905897972",
+        appId: "1:635905897972:web:67a7d9a3f4c103efca75a1"
+      };
 
-            // Firebase sign in
-            const auth = getAuth();
-            signInWithEmailAndPassword(auth, email, password)
-                .then((userCredential) => {
-                    // Signed in
-                    window.location.href = "tryhackme.html"; // Redirect after successful login
-                })
-                .catch((error) => {
-                    alert('Login failed: ' + error.message);
-                });
-        });
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const auth = getAuth(app);
+
+      // Handle login form submission
+      document.getElementById('login-form').addEventListener('submit', function(e) {
+        e.preventDefault();
+        const email = document.getElementById('email').value;
+        const password = document.getElementById('password').value;
+
+        signInWithEmailAndPassword(auth, email, password)
+          .then((userCredential) => {
+            // Successful login
+            const user = userCredential.user;
+            console.log("Login successful", user);
+            window.location.href = "tryhackme.html"; // Redirect after login
+          })
+          .catch((error) => {
+            console.error("Login error:", error.message);
+          });
+      });
     </script>
 </body>
 </html>
