--- a/resume.html
+++ b/resume.html
@@ -12,8 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="tryhackme.html">TryHackMe</a></li>
-                <li><a href="tcmsecurity.html">TCM Security</a></li>
+                <li><a href="study-notes.html">Personal Study Notes</a></li>
                 <li><a href="achievements.html">Achievements</a></li>
                 <li><a href="resume.html">Resume</a></li>
                 <li><a href="books.html">Books I've Read</a></li>
