--- a/tryhackme.html
+++ b/tryhackme.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,42 +8,18 @@
     <link rel="stylesheet" href="styles.css"> <!-- Link to your global CSS file -->
 </head>
 <body>
-    <!-- Navigation Menu -->
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="tryhackme.html">TryHackMe</a></li>
-                <li><a href="tcmsecurity.html">TCM Security</a></li>
-                <li><a href="achievements.html">Achievements</a></li>
-                <li><a href="resume.html">Resume</a></li>
-                <li><a href="books.html">Books I've Read</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="cyber-news.html">Cybersecurity News</a></li>
-            </ul>
-        </nav>
-    </header>
+    <!-- Your page content here -->
+    <h1>TryHackMe Pathway</h1>
+    <p>Documenting my TryHackMe learning journey and challenges.</p>
 
-    <!-- TryHackMe Pathway Header -->
-    <div id="tryhackme-header">
-        <h1>TryHackMe Pathway</h1>
-        <p>Documenting my TryHackMe learning journey and challenges.</p>
-    </div>
+    <!-- Firebase SDKs and Initialization -->
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth.js"></script>
 
-    <!-- Topics Section -->
-    <div id="tryhackme-container">
-        <!-- Content continues here -->
-    </div>
-
-    <!-- Firebase Configuration -->
-    <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js"></script>
-
-    <script type="module">
-        // Firebase configuration for your app
+    <script>
+        // Your Firebase configuration
         const firebaseConfig = {
-            apiKey: "AlzaSyAx-IM5C1Qx4T5tdeMP4n0TlO-iZLTxX7Q",
+            apiKey: "AIzaSyAx-IM5C1Qx4T5tdeMP4nOIT0-iZLTxX7Q",
             authDomain: "kristiancybersec.firebaseapp.com",
             projectId: "kristiancybersec",
             storageBucket: "kristiancybersec.appspot.com",
@@ -51,22 +28,20 @@
         };
 
         // Initialize Firebase
-        const app = firebase.initializeApp(firebaseConfig);
+        firebase.initializeApp(firebaseConfig);
 
-        // Initialize Firebase Authentication and get a reference to the service
+        // Initialize Firebase Auth
         const auth = firebase.auth();
 
-        // Protect the page with authentication
-        auth.onAuthStateChanged((user) => {
+        // Check if the user is authenticated
+        auth.onAuthStateChanged(user => {
             if (!user) {
-                // If not authenticated, redirect to login page
+                // Redirect to login page if not authenticated
                 window.location.href = "login.html";
             }
         });
     </script>
-
-    <footer>
-        <p>Check out my <a href="https://github.com/YourGitHubProfile">GitHub Profile</a></p>
-    </footer>
 </body>
 </html>
+
+
