updated manualpages,researching,studynotes and vun

--- a/study-notes.html
+++ b/study-notes.html
@@ -47,9 +47,9 @@
         <div class="burger-icon" onclick="toggleMenu()">☰</div>
         <div id="topics-menu" class="topics-menu">
             <ul>
-                <li><a href="#linux-basics">Linux Basics</a></li>
-                <li><a href="#networking-fundamentals">Networking Fundamentals</a></li>
-                <li><a href="#web-exploitation">Web Exploitation</a></li>
+                <li><a href="researching.html">Research</a></li>
+                <li><a href="vulnerabilitytesting.html">Vulnerability Searching</a></li>
+                <li><a href="manualpages.html">Linux Manual Pages</a></li>
             </ul>
         </div>
     </div>
@@ -62,31 +62,19 @@
 
     <!-- Topics Section -->
     <div id="tryhackme-container">
-        <div class="topic" id="linux-basics">
-            <h2>Linux Basics</h2>
-            <ul>
-                <li><a href="linux-commands.html">Linux Commands</a></li>
-                <li>File Permissions</li>
-                <li>Bash Scripting</li>
-            </ul>
+        <div class="topic" id="research">
+            <h2><a href="researching.html">Research</a></h2>
+            <p>Research is a critical skill in hacking. Learn how to Google efficiently to stay updated and find solutions to technical problems.</p>
         </div>
 
-        <div class="topic" id="networking-fundamentals">
-            <h2>Networking Fundamentals</h2>
-            <ul>
-                <li>TCP/IP Overview</li>
-                <li>Subnetting Basics</li>
-                <li>Network Services</li>
-            </ul>
+        <div class="topic" id="vulnerability-searching">
+            <h2><a href="vulnerabilitytesting.html">Vulnerability Searching</a></h2>
+            <p>Identify and search for vulnerabilities in software and websites using various databases like ExploitDB, NVD, and Searchsploit.</p>
         </div>
 
-        <div class="topic" id="web-exploitation">
-            <h2>Web Exploitation</h2>
-            <ul>
-                <li>Cross-Site Scripting (XSS)</li>
-                <li>SQL Injection</li>
-                <li>Cross-Site Request Forgery (CSRF)</li>
-            </ul>
+        <div class="topic" id="linux-manual-pages">
+            <h2><a href="manualpages.html">Linux Manual Pages</a></h2>
+            <p>Use the <code>man</code> command to access manuals and learn tool syntax, switches, and more.</p>
         </div>
     </div>
 
